# ciegl

./: CMakeLists.txt  Config.cmake.in  build.sh  dependencies_ubuntu.txt
.github/workflows/: github-actions.yml
data/configuration/controls/: ArcballCameraControls.json  FlyCameraControls.json  PanZoomCameraControls.json
data/shaders/: layout_template.json
data/shaders/Triangulated3DPartScene/: fragmentShader.glsl  vertexShader.json
data/shaders/coloredAxes/: fragmentShader.json  geometryShader.glsl  vertexShader.json
data/shaders/coloredRectangleFrame/: fragmentShader.glsl  geometryShader.glsl  geometryShader.json  vertexShader.glsl  vertexShader.json
data/shaders/default/: vertexShader.json
data/shaders/defaultWithColor/: fragmentShader.json  vertexShader.json
data/shaders/defaultWithTexture/: fragmentShader.json  vertexShader.json
data/shaders/plot2/: fragmentShader.json  vertexShader.json
data/shaders/pointWithTransformation/: fragmentShader.json  vertexShader.json
data/shaders/rectangleFrame/: vertexShader.glsl  vertexShader.json
data/shaders/trianglesWithNormals/: vertexShader.json
data/shaders/wireframeWithNormal/: vertexShader.json
docs/: doxyfile
docs/html/: AbsCameraControls_8hpp.html  AbsCameraControls_8hpp.js  AbsCameraControls_8hpp__dep__incl.map  AbsCameraControls_8hpp__dep__incl.md5  AbsCameraControls_8hpp__incl.map  AbsCameraControls_8hpp__incl.md5  AbsCamera_8hpp.html  AbsCamera_8hpp.js  AbsCamera_8hpp__dep__incl.map  AbsCamera_8hpp__dep__incl.md5  AbsCamera_8hpp__incl.map  AbsCamera_8hpp__incl.md5  AbsContext_8hpp.html  AbsContext_8hpp.js  AbsContext_8hpp__dep__incl.map  AbsContext_8hpp__dep__incl.md5  AbsContext_8hpp__incl.map  AbsContext_8hpp__incl.md5  AbsGLShape_8hpp.html  AbsGLShape_8hpp.js  AbsGLShape_8hpp__dep__incl.map  AbsGLShape_8hpp__dep__incl.md5  AbsGLShape_8hpp__incl.map  AbsGLShape_8hpp__incl.md5  AbsMonitor_8hpp.html  AbsMonitor_8hpp.js  AbsMonitor_8hpp__dep__incl.map  AbsMonitor_8hpp__dep__incl.md5  AbsMonitor_8hpp__incl.map  AbsMonitor_8hpp__incl.md5  AbsPlot2_8hpp.html  AbsPlot2_8hpp__dep__incl.map  AbsPlot2_8hpp__dep__incl.md5  AbsPlot2_8hpp__incl.map  AbsPlot2_8hpp__incl.md5  AbsPlot_8hpp.html  AbsPlot_8hpp__dep__incl.map  AbsPlot_8hpp__dep__incl.md5  AbsPlot_8hpp__incl.map  AbsPlot_8hpp__incl.md5  (+1108 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+126 more)
inc/: ciegl_shaders.hpp
python/: CMakeLists.txt
python/modules/glmesh/: __init__.py  meshapp.py  meshnode.py  meshvisual.py
python/modules/gltexture/: __init__.py  textureimport.py
python/modules/glvisuals/: __init__.py
python/modules/lighting/: __init__.py
python/scripts/: cageDonut.py  movingmesh.py  splineSphere.py  test_aggregatedtexture.py  test_meshnode.py  test_vertexUpdate.py  textureTest.py  torus.py
src/: ciegl_shaders.cpp.in
test/: ciegl_testrunner.cpp
